Set EmailJS configuration values
Updated EmailJS configuration with actual service ID, template ID, and public key.

--- a/index.html
+++ b/index.html
@@ -581,9 +581,9 @@ if (voucherInput) {
   - Fill the three constants below with your own values from https://www.emailjs.com
     BEFORE you use the "Kirim OTP" button.
 */
-const EMAILJS_SERVICE_ID = ""; // e.g.service_12pbomi
-const EMAILJS_TEMPLATE_ID = ""; // e.g.template_7ogcucf
-const EMAILJS_PUBLIC_KEY  = ""; // e.g.pN26wX7mQuNCm8UC6
+const EMAILJS_SERVICE_ID = "service_12pbomi";
+const EMAILJS_TEMPLATE_ID = "template_7ogcucf";
+const EMAILJS_PUBLIC_KEY  = "pN26wX7mQuNCm8UC6";
 
 /* load EmailJS library (only if keys provided) */
 (function loadEmailJs(){
