Update EmailJS public key in index.html

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ if (voucherInput) {
 */
 const EMAILJS_SERVICE_ID = "service_12pbomi";
 const EMAILJS_TEMPLATE_ID = "template_7ogcucf";
-const EMAILJS_PUBLIC_KEY  = "pN26wX7mQuNCm8UC6";
+const EMAILJS_PUBLIC_KEY  = "VGG_LvyXyjARUuPMY";
 
 /* load EmailJS library (only if keys provided) */
 (function loadEmailJs(){
